--- a/app/src/main/res/layout/item_home_new.xml
+++ b/app/src/main/res/layout/item_home_new.xml
@@ -1,159 +1,182 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/common_to_side"
-    android:background="@android:color/background_light"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/common_to_side"
-    android:paddingRight="@dimen/common_to_side">
-    <!--android:background="@drawable/card_background_selector"-->
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
-        android:id="@+id/rl_after_login"
+    <data>
+
+        <variable
+            name="zoneBean"
+            type="com.minyou.manba.network.resultModel.ZoneListResultModel.ResultBean.ZoneListBean" />
+
+        <import type="java.lang.String" />
+        <import type="android.view.View"/>
+        <import type="android.text.TextUtils"/>
+        <import type="com.minyou.manba.util.CommonUtil"/>
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/mine_user_height"
-        android:visibility="visible">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/common_to_side"
+        android:background="@android:color/background_light"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/common_to_side"
+        android:paddingRight="@dimen/common_to_side"
+        app:setOnLayoutItemClick="@{zoneBean}">
+        <!--android:background="@drawable/card_background_selector"-->
 
         <RelativeLayout
-            android:id="@+id/rl_user_pic"
-            android:layout_width="@dimen/icon_width"
-            android:layout_height="@dimen/icon_width"
-            android:layout_centerVertical="true">
+            android:id="@+id/rl_after_login"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/mine_user_height"
+            android:visibility="visible">
 
-            <ImageView
-                android:id="@+id/iv_user_pic"
+            <RelativeLayout
+                android:id="@+id/rl_user_pic"
                 android:layout_width="@dimen/icon_width"
                 android:layout_height="@dimen/icon_width"
                 android:layout_centerVertical="true"
-                android:src="@drawable/login_icon_qq" />
+                app:setUserPicList="@{zoneBean}">
 
-            <ImageView
-                android:id="@+id/iv_sex"
-                android:layout_width="@dimen/icon_sex_width"
-                android:layout_height="@dimen/icon_sex_width"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/home_icon_nan" />
+                <ImageView
+                    android:id="@+id/iv_user_pic"
+                    android:layout_width="@dimen/icon_width"
+                    android:layout_height="@dimen/icon_width"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/login_icon_qq" />
 
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/iv_sex"
+                    android:layout_width="@dimen/icon_sex_width"
+                    android:layout_height="@dimen/icon_sex_width"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentEnd="true" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/home_to_side"
-            android:layout_toRightOf="@id/rl_user_pic"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tv_username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/username_textsize" />
+            </RelativeLayout>
 
             <LinearLayout
-                android:id="@+id/ll_user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/common_to_side"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/home_to_side"
+                android:layout_toRightOf="@id/rl_user_pic"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tv_pub_time"
+                    android:id="@+id/tv_username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_name"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="@dimen/small_textsize" />
+                    android:text="@{zoneBean.nickName}"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/username_textsize" />
 
-                <TextView
-                    android:id="@+id/tv_familyname"
+                <LinearLayout
+                    android:id="@+id/ll_user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/home_to_side"
-                    android:background="@drawable/shape_borderline_grey_homename"
-                    android:text="@string/regist_lingyu"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="@dimen/small_textsize" />
+                    android:layout_marginTop="@dimen/common_to_side"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_pub_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{CommonUtil.transformTimeToDay(zoneBean.publishTime)}"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="@dimen/small_textsize" />
+
+                    <TextView
+                        android:id="@+id/tv_familyname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/home_to_side"
+                        android:background="@drawable/shape_borderline_grey_homename"
+                        android:visibility="@{TextUtils.isEmpty(zoneBean.guildName) ? View.GONE : View.VISIBLE}"
+                        android:text="@{zoneBean.guildName}"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="@dimen/small_textsize" />
+                </LinearLayout>
+
+
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_guanzhu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/shape_borderline_grey_guanzhu"
+                android:drawableLeft="@drawable/home_icon_guanzhu"
+                android:drawablePadding="@dimen/common_text_side"
+                app:setDongTaiGuanZhu="@{zoneBean}"
+                android:text="@string/home_guanzhu"
+                android:textColor="@color/colorCommon"
+                android:textSize="@dimen/small_textsize" />
+        </RelativeLayout>
+
+        <com.minyou.manba.ui.view.MultiImageView
+            android:id="@+id/multiImagView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:setListMultiImageView="@{zoneBean}"></com.minyou.manba.ui.view.MultiImageView>
+
+        <TextView
+            android:id="@+id/tv_content_desc"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/login_num_side"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="@{zoneBean.zoneContent}" />
+
+        <LinearLayout
+            android:id="@+id/ll_count_list"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/login_num_side"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_content_fenxiang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/home_to_side"
+                android:drawableLeft="@drawable/home_icon_zf"
+                android:drawablePadding="@dimen/common_text_side"
+                android:gravity="center"
+                android:text="@{String.valueOf(zoneBean.lookNum)}"
+                android:textSize="@dimen/small_textsize" />
+
+            <CheckBox
+                android:id="@+id/tv_content_zan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:button="@null"
+                android:checked="@{zoneBean.upvote ? true : false}"
+                android:layout_marginLeft="@dimen/new_item_side"
+                android:drawableLeft="@drawable/select_home_zan"
+                android:drawablePadding="@dimen/common_text_side"
+                android:gravity="center"
+                app:setDongTaiZan="@{zoneBean}"
+                android:text="@{String.valueOf(zoneBean.upvoteNum)}"
+                android:textSize="@dimen/small_textsize" />
+
+            <TextView
+                android:id="@+id/tv_content_comment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/new_item_side"
+                android:drawableLeft="@drawable/home_icon_pinglun"
+                android:drawablePadding="@dimen/common_text_side"
+                android:gravity="center"
+                android:text="@{String.valueOf(zoneBean.commentNum)}"
+                android:textSize="@dimen/small_textsize" />
 
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_guanzhu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/shape_borderline_grey_guanzhu"
-            android:drawableLeft="@drawable/home_icon_guanzhu"
-            android:drawablePadding="@dimen/common_text_side"
-            android:text="@string/home_guanzhu"
-            android:textColor="@color/colorCommon"
-            android:textSize="@dimen/small_textsize" />
-    </RelativeLayout>
-
-    <com.minyou.manba.ui.view.MultiImageView
-        android:id="@+id/multiImagView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></com.minyou.manba.ui.view.MultiImageView>
-
-    <TextView
-        android:id="@+id/tv_content_desc"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/login_num_side"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:text="@string/test_more" />
-
-    <LinearLayout
-        android:id="@+id/ll_count_list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/login_num_side"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_content_fenxiang"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/home_to_side"
-            android:drawableLeft="@drawable/home_icon_zf"
-            android:drawablePadding="@dimen/common_text_side"
-            android:gravity="center"
-            android:text="20"
-            android:textSize="@dimen/small_textsize" />
-
-        <TextView
-            android:id="@+id/tv_content_zan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/new_item_side"
-            android:drawableLeft="@drawable/select_home_zan"
-            android:drawablePadding="@dimen/common_text_side"
-            android:gravity="center"
-            android:text="20"
-            android:textSize="@dimen/small_textsize" />
-
-        <TextView
-            android:id="@+id/tv_content_comment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/new_item_side"
-            android:drawableLeft="@drawable/home_icon_pinglun"
-            android:drawablePadding="@dimen/common_text_side"
-            android:gravity="center"
-            android:text="20"
-            android:textSize="@dimen/small_textsize" />
-
-
     </LinearLayout>
-
-</LinearLayout>
+</layout>
