--- a/app/src/main/res/layout/activity_dongtai_detail.xml
+++ b/app/src/main/res/layout/activity_dongtai_detail.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+        <variable
+            name="ZoneDetailBean"
+            type="com.minyou.manba.network.resultModel.ZoneDetailResultModel.ZoneDetailBean" />
+
+        <variable
+            name="UserInfo"
+            type="com.minyou.manba.network.resultModel.UserDetailResultModel.UserDetailBean" />
+
+        <import type="java.lang.String" />
+    </data>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,9 +28,11 @@
 
 
         <ScrollView
+            android:id="@+id/scrollview_detal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/atv_title">
+            android:layout_below="@id/atv_title"
+            android:layout_marginBottom="50dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,7 +60,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawableBottom="@drawable/details_icon_zan"
-                        android:text="1008"
+                        android:text="@{String.valueOf(ZoneDetailBean.upvoteNum)}"
                         android:textSize="@dimen/small_textsize" />
 
                     <LinearLayout
@@ -52,8 +68,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/common_to_side"
-                        android:orientation="horizontal"
-                        android:layout_weight="1" />
+                        android:layout_weight="1"
+                        android:orientation="horizontal" />
 
                     <ImageView
                         android:id="@+id/iv_more"
@@ -64,12 +80,37 @@
                         android:src="@drawable/details_icon_more" />
                 </LinearLayout>
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycler_comment"
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/common_to_side"
+                    android:background="@color/aliceblue"/>
+
+                <TextView
+                    android:id="@+id/all_reply_num_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/common_to_top"
-                    android:background="@android:color/background_light"></android.support.v7.widget.RecyclerView>
+                    android:gravity="center_vertical"
+                    android:padding="@dimen/common_to_side"
+                    android:text="全部评论（3）"
+                    android:textSize="16dp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/common_to_side"
+                    android:background="@color/aliceblue"/>
+
+                <in.srain.cube.views.ptr.PtrClassicFrameLayout
+                    android:id="@+id/pcfl_refresh_comment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/common_to_top">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recycler_comment"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/background_light"></android.support.v7.widget.RecyclerView>
+                </in.srain.cube.views.ptr.PtrClassicFrameLayout>
 
             </LinearLayout>
 
@@ -77,29 +118,34 @@
 
 
         <RelativeLayout
+            android:id="@+id/rl_menu"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:background="@android:color/background_light"
             android:padding="@dimen/common_to_top">
 
-            <TextView
+            <CheckBox
                 android:id="@+id/tv_shoucang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/common_to_side"
+                android:button="@null"
                 android:drawableLeft="@drawable/details_icon_shouchang"
                 android:drawablePadding="@dimen/common_text_side"
-                android:text="20" />
+                android:checked="@{ZoneDetailBean.favorite ? true : false}"
+                android:text="@{String.valueOf(ZoneDetailBean.favoriteNum)}" />
 
-            <TextView
+            <CheckBox
                 android:id="@+id/tv_zan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:drawableLeft="@drawable/details_icon_dazan"
+                android:layout_centerHorizontal="true"
+                android:button="@null"
+                android:drawableLeft="@drawable/select_detail_zan"
                 android:drawablePadding="@dimen/common_text_side"
-                android:text="168" />
+                android:checked="@{ZoneDetailBean.upvote ? true : false}"
+                android:text="@{String.valueOf(ZoneDetailBean.upvoteNum)}" />
 
             <TextView
                 android:id="@+id/tv_comment"
@@ -109,8 +155,41 @@
                 android:layout_marginRight="@dimen/common_to_side"
                 android:drawableLeft="@drawable/details_icon_pinglun"
                 android:drawablePadding="@dimen/common_text_side"
-                android:text="20" />
+                android:text="@{String.valueOf(ZoneDetailBean.commentNum)}" />
         </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_comment"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal"
+            android:visibility="visible"
+            android:background="@android:color/background_light">
+
+            <EditText
+                android:id="@+id/et_comment_text"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="bottom"
+                android:layout_marginLeft="@dimen/common_to_side"
+                android:layout_weight="1"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:hint="@string/detail_send_hint" />
+
+            <TextView
+                android:id="@+id/tv_send"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginLeft="@dimen/common_to_side"
+                android:background="@drawable/select_common_bg"
+                android:text="@string/detail_send"
+                android:textColor="@android:color/background_light"/>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
