--- a/app/src/main/res/layout/dialog_input_single.xml
+++ b/app/src/main/res/layout/dialog_input_single.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="260dp"
-    android:layout_height="260dp"
+    android:layout_height="wrap_content"
     android:background="@android:color/background_light"
     android:orientation="vertical">
 
@@ -9,7 +9,7 @@
         android:id="@+id/tv_msg_dialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:layout_margin="20dp"
         android:gravity="center"
         android:text="@string/fabu_content_hint"
@@ -20,12 +20,13 @@
         android:id="@+id/et_input_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
+        android:hint="@string/fabu_content_hint"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:hint="@string/fabu_content_hint"
+        android:textColor="@android:color/black"
         android:textSize="18dp" />
 
     <View
@@ -37,6 +38,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="46dp"
+        android:layout_gravity="center"
         android:orientation="horizontal">
 
         <TextView
