--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -39,10 +39,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_pub_time"
+                        android:id="@+id/tv_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@android:color/black"
+                        android:text="123"
                         android:textSize="@dimen/username_textsize" />
 
                     <TextView
@@ -58,7 +59,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/tv_username"
+                    android:id="@+id/tv_pub_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/common_to_side"
@@ -136,44 +137,44 @@
             </LinearLayout>
         </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/rl_before_login"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/mine_top"
-            android:background="@android:color/background_light"
-            android:visibility="gone">
+        <!--<RelativeLayout-->
+            <!--android:id="@+id/rl_before_login"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="@dimen/mine_top"-->
+            <!--android:background="@android:color/background_light"-->
+            <!--android:visibility="gone">-->
 
-            <TextView
-                android:id="@+id/tv_welcome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/mine_login_side"
-                android:layout_marginTop="@dimen/mine_welcome_side"
-                android:text="@string/my_login"
-                android:textSize="@dimen/large_textsize" />
+            <!--<TextView-->
+                <!--android:id="@+id/tv_welcome"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="@dimen/mine_login_side"-->
+                <!--android:layout_marginTop="@dimen/mine_welcome_side"-->
+                <!--android:text="@string/my_login"-->
+                <!--android:textSize="@dimen/large_textsize" />-->
 
-            <Button
-                android:id="@+id/bt_login"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_welcome"
-                android:layout_marginLeft="@dimen/mine_login_side"
-                android:layout_marginTop="@dimen/mine_login_side"
-                android:background="@drawable/shape_borderline_bluefull"
-                android:paddingLeft="@dimen/mine_login_side"
-                android:paddingRight="@dimen/mine_login_side"
-                android:text="@string/login"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/common_textsize" />
+            <!--<Button-->
+                <!--android:id="@+id/bt_login"-->
+                <!--android:layout_width="120dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/tv_welcome"-->
+                <!--android:layout_marginLeft="@dimen/mine_login_side"-->
+                <!--android:layout_marginTop="@dimen/mine_login_side"-->
+                <!--android:background="@drawable/shape_borderline_bluefull"-->
+                <!--android:paddingLeft="@dimen/mine_login_side"-->
+                <!--android:paddingRight="@dimen/mine_login_side"-->
+                <!--android:text="@string/login"-->
+                <!--android:textColor="@android:color/white"-->
+                <!--android:textSize="@dimen/common_textsize" />-->
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="@dimen/mine_login_side"
-                android:src="@drawable/ic_launcher" />
-        </RelativeLayout>
+            <!--<ImageView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignParentEnd="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:layout_marginRight="@dimen/mine_login_side"-->
+                <!--android:src="@drawable/ic_launcher" />-->
+        <!--</RelativeLayout>-->
 
         <LinearLayout
             android:layout_width="match_parent"
