--- a/app/src/main/res/layout/view_action_title.xml
+++ b/app/src/main/res/layout/view_action_title.xml
@@ -23,8 +23,8 @@
         android:textColor="@color/colorCommon"
         android:text="123" />
 
-    <ImageView
-        android:id="@+id/iv_title_right"
+    <TextView
+        android:id="@+id/tv_title_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
