--- a/app/src/main/res/layout/activity_dongtai_detail.xml
+++ b/app/src/main/res/layout/activity_dongtai_detail.xml
@@ -8,10 +8,6 @@
             name="ZoneDetailBean"
             type="com.minyou.manba.network.resultModel.ZoneDetailResultModel.ZoneDetailBean" />
 
-        <variable
-            name="UserInfo"
-            type="com.minyou.manba.network.resultModel.UserDetailResultModel.UserDetailBean" />
-
         <import type="java.lang.String" />
     </data>
 
@@ -27,83 +23,17 @@
             android:gravity="center_vertical"></com.minyou.manba.ui.ActionTitleView>
 
 
-        <ScrollView
-            android:id="@+id/scrollview_detal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/atv_title"
-            android:layout_marginBottom="50dp">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <include
-                    android:id="@+id/include"
-                    layout="@layout/item_activity_dongtai_detail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/background_light" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/common_to_top"
-                    android:background="@android:color/background_light"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/common_to_side">
-
-                    <TextView
-                        android:id="@+id/tv_count_zan"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawableBottom="@drawable/details_icon_zan"
-                        android:text="@{String.valueOf(ZoneDetailBean.upvoteNum)}"
-                        android:textSize="@dimen/small_textsize" />
-
-                    <LinearLayout
-                        android:id="@+id/ll_zan_list"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/common_to_side"
-                        android:layout_weight="1"
-                        android:orientation="horizontal" />
-
-                    <ImageView
-                        android:id="@+id/iv_more"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="@dimen/common_to_side"
-                        android:layout_marginRight="@dimen/common_to_side"
-                        android:src="@drawable/details_icon_more" />
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/common_to_side"
-                    android:background="@color/aliceblue"/>
-
-                <TextView
-                    android:id="@+id/all_reply_num_tv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:padding="@dimen/common_to_side"
-                    android:text="全部评论（3）"
-                    android:textSize="16dp" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/common_to_side"
-                    android:background="@color/aliceblue"/>
+                android:orientation="vertical"
+                android:layout_marginBottom="50dp"
+                android:layout_below="@id/atv_title">
 
                 <in.srain.cube.views.ptr.PtrClassicFrameLayout
                     android:id="@+id/pcfl_refresh_comment"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="@dimen/common_to_top">
+                    android:layout_height="match_parent">
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recycler_comment"
@@ -114,7 +44,7 @@
 
             </LinearLayout>
 
-        </ScrollView>
+        <!--</ScrollView>-->
 
 
         <RelativeLayout
@@ -164,8 +94,9 @@
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:orientation="horizontal"
-            android:visibility="visible"
+            android:visibility="gone"
             android:background="@android:color/background_light">
+
 
             <EditText
                 android:id="@+id/et_comment_text"
