--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -64,6 +64,9 @@
     <!--   公会详情   -->
     <dimen name="sociation_head_height">200dp</dimen>
 
+    <!--   动态详情   -->
+    <dimen name="dongtai_common_left">35dp</dimen>
+
     <!--   收藏界面   -->
     <dimen name="shouc_user_pic">30dp</dimen>  <!--  收藏界面用户图片宽高 -->
     <dimen name="shouc_content_pic">80dp</dimen>   <!--  收藏界面内容图片宽高 -->
